--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -3,9 +3,8 @@
   justify-content: center;
   border-top: 2px solid #ccc;
   padding: 2rem 0 1.5rem;
-
-  &__text {
-    margin: 0;
-    padding: 0;
-  }
+}
+.footer__text {
+  margin: 0;
+  padding: 0;
 }
