add sign in function

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -45,8 +45,12 @@
 .main-nav-item {
   text-decoration: none;
   margin-right: 0.5rem;
-
-  i {
-    margin-right: 0.25rem;
-  }
+}
+.fa-icon {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  margin-right: 0.25rem;
 }
