--- a/src/pages/Users/users.css
+++ b/src/pages/Users/users.css
@@ -25,3 +25,34 @@
   width: 1px !important;
   white-space: nowrap !important; /* 3 */
 }
+.readonly-input {
+  background-color: grey;
+}
+.form-edit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.edit-block {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+.button-edit {
+  display: flex;
+  gap: 2rem;
+}
+.button-style {
+  color: white;
+  background-color: #00bc77;
+  height: 3rem;
+  width: 9rem;
+  border-radius: 5px;
+  border-color: #00bc77;
+  font-weight: bold;
+  padding: 10px;
+}
+.input-style {
+  border-radius: 5px;
+}
